# factlens

./: .gitignore  CLAUDE.md  LICENSE  example.env  main.py  pyproject.toml
.claude/agent-memory/data-engineer/: feedback_language.md  project_dataset_conventions.md
.claude/agents/: data-engineer.md  eda-data-analyst.md
data/processed/: news_classification_profile_report.html
docs/: project_description_ssn.md
notebooks/explore/: 01_eda.ipynb  02_leakage.ipynb  02_preprocessing.ipynb  03_cleaning.ipynb  03_leakage_analysis.ipynb  04_post_cleaning.ipynb  05_splits.ipynb  eda.ipynb  original_news_classification.ipynb
notebooks/report/: 00_raport.html  00_raport.ipynb  01_cleaning_report.ipynb  01_data_overview.ipynb  02_leakage_analysis.ipynb  03_cleaning_pipeline.ipynb
src/: config.py  paths.py
src/preprocessing/: cleaning.py  splits.py
