[project]
name = "eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=0.4.1",
    "matplotlib>=3.10.0",
    "nltk>=3.9",
    "pandas<3.0",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.14",
    "seaborn>=0.13",
    "setuptools>=80.10.1",
    "wordcloud>=1.9",
    "ydata-profiling>=4.18.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
]
